# shm_close_toProject

./: CMakeLists.txt
src/include/: Data.h  myTypes.h
src/source/: reader.cpp  writer.cpp
